--- a/deploy/staging/docker-compose.yml
+++ b/deploy/staging/docker-compose.yml
@@ -20,9 +20,9 @@ services:
       database__client: mysql
       database__connection__host: db
       database__connection__user: root
-      database__connection__password_FILE: /run/secrets/db_password
       database__connection__password: /run/secrets/db_password
       database__connection__database: ghost
+      NODE_ENV: development
     secrets:
       - db_password
     volumes:
