--- a/deploy/staging/docker-compose.yml
+++ b/deploy/staging/docker-compose.yml
@@ -8,61 +8,8 @@ services:
     ports:
       - "3000:3000"
     networks:
-      - nginx_proxy_manager_default
-
-  ghost:
-    container_name: ghost
-    image: ghost:5-alpine
-    restart: always
-    ports:
-      - "2368:2368"
-    environment:
-      url: https://g-panel.ferryhub.info/
-      database__client: mysql
-      database__connection__host: db
-      database__connection__user: root
-      database__connection__password: /run/secrets/db_password
-      database__connection__database: ghost
-      server__host: 0.0.0.0
-      server__port: 2368
-      admin__url: https://g-panel.ferryhub.info/
-      NODE_ENV: development
-    secrets:
-      - db_password
-    volumes:
-      - ghost:/var/lib/ghost/content
-    networks:
-      - nginx_proxy_manager_default
-    depends_on:
-      - db
-
-  db:
-    image: mysql:8.0
-    restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD_FILE: /run/secrets/db_password
-      MYSQL_DATABASE: ghost
-      MYSQL_USER: root
-      MYSQL_PASSWORD_FILE: /run/secrets/db_password
-    secrets:
-      - db_password
-    ports:
-      - "3306:3306"
-    expose:
-      - 3306
-    volumes:
-      - db:/var/lib/mysql
-    networks:
-      - nginx_proxy_manager_default
-
-volumes:
-  ghost:
-  db:
+      - nginx_proxy_manager
 
 networks:
-  nginx_proxy_manager_default:
+  nginx_proxy_manager:
     external: true
-
-secrets:
-  db_password:
-    file: ./secrets/db_password.txt
