--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -29,7 +29,7 @@ jobs:
           script: |
             # 1. Navigasi ke direktori aplikasi Anda di server
             # Ganti dengan path direktori Anda yang sebenarnya
-            cd /var/www/portfolio
+            cd /var/www/portfolio/deploy/staging
 
             # 2. Login ke GitHub Container Registry (GHCR) di server remote
             # Memastikan server bisa pull image dari GHCR
