--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -35,11 +35,19 @@ jobs:
             # Memastikan server bisa pull image dari GHCR
             echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
-            # 3. Pull image terbaru dan jalankan ulang Docker Compose
-            # 'docker compose pull' menarik image terbaru
-            # 'docker compose up -d' menjalankan kontainer
-            docker compose pull
-            docker compose up -d
+            # 3. Pull image terbaru dan jalankan ulang Docker compose
+            GHCR_IMAGE="${{ env.REGISTRY }}/${{ env.REPOSITORY }}/${SERVICE}"
+            IMAGE_PATH="${{ GHCR_IMAGE }}:latest"
+
+            docker pull $IMAGE_PATH
+            docker stop frontend || true
+            docker rm frontend || true
+
+            echo "Starting new container..."
+            docker run -d \
+              --name frontend \
+              -p 8080:80 \
+              $IMAGE_PATH
 
             # 4. Cleanup: Menghapus image lama yang tidak terpakai
             docker image prune -f
