--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -36,7 +36,7 @@ jobs:
             echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
             # 3. Pull image terbaru dan jalankan ulang Docker compose
-            GHCR_IMAGE="${{ env.REGISTRY }}/${{ env.REPOSITORY }}/${SERVICE}"
+            GHCR_IMAGE="${{ env.REGISTRY }}/${{ env.REPOSITORY }}/frontend"
             IMAGE_PATH="${{ GHCR_IMAGE }}:latest"
 
             docker pull $IMAGE_PATH
