--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -30,7 +30,7 @@ jobs:
             echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
             # 3. Pull image terbaru dan jalankan ulang Docker compose
-            IMAGE_PATH="docker pull ghcr.io/ferryanggriawan/portfolio/frontend:5717727198ab570e4f84e472548ce0e357f0c8fb"
+            IMAGE_PATH="ghcr.io/ferryanggriawan/portfolio/frontend:5717727198ab570e4f84e472548ce0e357f0c8fb"
 
             docker pull $IMAGE_PATH
             docker stop frontend || true
