--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -30,7 +30,12 @@ jobs:
             echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
             # 3. Pull image terbaru dan jalankan ulang Docker compose
-            IMAGE_PATH="ghcr.io/ferryanggriawan/portfolio/frontend:5717727198ab570e4f84e472548ce0e357f0c8fb"
+            IMAGE_TAG="${{ env.IMAGE_TAG }}"
+            if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
+              IMAGE_TAG="latest"
+            fi
+
+            IMAGE_PATH="ghcr.io/ferryanggriawan/portfolio/frontend:${{ TAG }}"
 
             docker pull $IMAGE_PATH
             docker stop frontend || true
