--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -30,7 +30,7 @@ jobs:
             echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
             # 3. Pull image terbaru dan jalankan ulang Docker compose
-            IMAGE_TAG="${{ env.IMAGE_TAG }}"
+            IMAGE_TAG="${{ github.sha }}"
             if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
               IMAGE_TAG="latest"
             fi
