--- a/.github/workflows/build-staging.yml
+++ b/.github/workflows/build-staging.yml
@@ -71,6 +71,7 @@ jobs:
             # 4. Push image ke GHCR
             echo "Pushing ${GHCR_IMAGE}:${{ env.IMAGE_TAG }}..."
             docker push ${GHCR_IMAGE}:${{ env.IMAGE_TAG }}
+            docker push ${GHCR_IMAGE}:latest
             
             # 5. Jika berada di branch utama, tambahkan tag 'latest'
             if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
