test multi container

--- a/.github/workflows/build-staging.yml
+++ b/.github/workflows/build-staging.yml
@@ -51,10 +51,7 @@ jobs:
       - name: Tag and Push Images
         shell: bash
         run: |
-          # PENTING: Daftar SERVICE_NAMES harus sesuai dengan nama layanan
-          # yang ada di dalam file 'docker-compose.yml' Anda.
-          # Ganti 'web' dan 'api' dengan nama layanan Anda yang sebenarnya.
-          SERVICE_NAMES=("frontend")
+          SERVICE_NAMES=("frontend", "prometheus", "node-exporter")
 
           echo "Processing services: ${SERVICE_NAMES[*]}"
 
