--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -29,7 +29,7 @@ jobs:
 
             ls -a
 
-            SERVICE_NAMES=("frontend" "prometheus" "node-exporter")
+            SERVICE_NAMES=("frontend")
 
             for SERVICE in "${SERVICE_NAMES[@]}"; do
               docker stop ${SERVICE} || true
