--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -22,28 +22,18 @@ jobs:
           script: |
             echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
-            echo "IMAGE_TAG=${{ github.sha }}"
-            if [[ "${{ github.ref }}" == "refs/heads/main" ]]; then
-              IMAGE_TAG="latest"
-            fi
+            DEPLOY_DIR="/root/portfolio"
 
-            ls -a
+            cd ${DEPLOY_DIR}
 
-            SERVICE_NAMES=("frontend")
+            git pull origin main
 
-            for SERVICE in "${SERVICE_NAMES[@]}"; do
-              docker stop ${SERVICE} || true
-              docker rm ${SERVICE} || true
+            cd ${DEPLOY_DIR}/deploy/staging
 
-              IMAGE_PATH="ghcr.io/ferryanggriawan/portfolio/${SERVICE}:latest"
+            docker compose pull
 
-              docker pull $IMAGE_PATH
+            docker compose up -d
 
-              echo "Starting new container..."
-              docker run -d --name ${SERVICE} $IMAGE_PATH
-
-            done
-
-            docker image prune -f
+            docker system prune -a
 
             echo "Deployment successful for ${{ github.sha }}"
